# megakit-cpp

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
apps/toolkit/: main.cpp
data/: sample.csv
examples/: example_graph.cpp
include/megakit/algo/: bfs.hpp  dijkstra.hpp  kmp.hpp  topo_sort.hpp
include/megakit/ds/: disjoint_set.hpp  segment_tree.hpp
include/megakit/io/: argparse.hpp
include/megakit/math/: gcd.hpp  sieve.hpp
include/megakit/utils/: timer.hpp
scripts/: build.sh  run_tests.sh
src/megakit/algo/: bfs.cpp  dijkstra.cpp  kmp.cpp  topo_sort.cpp
src/megakit/ds/: disjoint_set.cpp  segment_tree.cpp
src/megakit/io/: argparse.cpp
src/megakit/math/: gcd.cpp  sieve.cpp
src/megakit/utils/: timer.cpp
tests/: test_graph.cpp  test_main.cpp  test_math.cpp  test_strings.cpp  test_util.hpp
